--- a/backend/DogBreedModel.ipynb
+++ b/backend/DogBreedModel.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "DogBreedModel.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO1toGZ++Ijs+IDb77VQu+H",
+      "authorship_tag": "ABX9TyOIqLvXl7cY5vNm3jX8LpNZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,6 +43,33 @@
       "cell_type": "code",
       "metadata": {
         "id": "Wv1yikXPphzx"
+      },
+      "source": [
+        "# Import Tools\r\n",
+        "import pandas as pd\r\n",
+        "import numpy as np\r\n",
+        "import matplotlib.pyplot as plt\r\n",
+        "import tensorflow as tf\r\n",
+        "import tensorflow_hub as hub"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jC9slUkqqiBg"
+      },
+      "source": [
+        "## Preprocessing Data\r\n",
+        " Turning images into Tensors\r\n",
+        " "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "alkc4Z1XqxNQ"
       },
       "source": [
         ""
